--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "6.6.0",
     "body-parser": "1.15.0",
     "colors": "1.1.2",
+    "expect": "1.15.2",
     "express": "4.13.4",
     "jfs": "0.2.6",
     "method-override": "2.3.5",
